-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 3.1.0
-
None
-
fedora18
-
75a065d3d1f22afb9fdbe6011f162c57ed58c1e0 (qt-creator/qt-creator/master)
If a method is Q_INVOKABLE the auto-generation of the Doxygen documentation does not work:
class SomeClass { ... /*! <ENTER> Q_INVOKABLE QVariant myMethod(const QString& par1, const QString& par2); } I'd expect it to expand to: /*! * \brief myMethod * \param par1 * \param par2 * \return */